# termigram

./: .gitignore  pyproject.toml
termigram/: __main__.py  app.py  client.py
termigram/screens/: auth.py  main.py
termigram/styles/: app.tcss
termigram/widgets/: chat_list.py  message_input.py  message_view.py
